# zync-rs

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: zbuilder.yml
src/: color.rs  config.rs  lock.rs  logger.rs  main.rs  runner.rs  state.rs  ui.rs
src/modules/: apt.rs  auto_updates.rs  bootc.rs  brew.rs  custom.rs  distrobox.rs  dnf.rs  firmware.rs  flatpak.rs  mod.rs  nix.rs  nodejs.rs  pacman.rs  podman.rs  python.rs  rollback.rs  rpm_ostree.rs  rust.rs  vscode.rs  zbox.rs  zypper.rs
