[package]
name    = "zync"
version = "1.1.0"
edition = "2024"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[dependencies]
fs2        = "0.4"
clap       = { version = "4", features = ["derive", "color"] }
serde_json = "1"
serde      = { version = "1", features = ["derive"] }
toml       = "1.1"
indicatif  = "0.18"
libc       = "0.2"

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]