[package]
name    = "zync"
version = "1.1.1"
edition = "2024"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[dependencies]
fs2        = "0.4"
clap       = { version = "4.6.1", features = ["derive", "color"] }
serde_json = "1"
serde      = { version = "1", features = ["derive"] }
toml       = "1.1.2+spec-1.1.0"
indicatif          = "0.18"
libc               = "0.2.185"
strip-ansi-escapes = "0.2"
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
which              = "8"

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]